Update game files: CSS styles, HTML, business logic, leaderboard, and UI improvements

--- a/index.html
+++ b/index.html
@@ -10,22 +10,23 @@
     <div class="game-container">
         <!-- Header -->
         <header class="top-bar">
-            <!-- Left Logo -->
-            <div class="header-logo">
-                <span class="logo-text">COSA NOSTRA</span>
-            </div>
-            
-            <!-- Right Controls -->
-            <div class="header-right">
-                <button id="prestige-btn" class="prestige-btn" disabled>
-                    Prestige
-                </button>
-                <div class="header-counters">
-                    <span>RESPECT </span><span id="respect-amount">0</span>
-                    <span class="separator"> · </span>
-                    <span>PRESTIGE </span><span id="prestige-level">0</span>
+            <div class="top-bar-inner">
+                <!-- Left Logo -->
+                <div class="header-logo">
+                    <span class="logo-text">COSA NOSTRA</span>
                 </div>
-                <button id="leaderboard-btn" class="trophy-btn">🏆</button>
+                
+                <!-- Right Controls -->
+                <div class="header-right">
+                    <button id="prestige-btn" class="prestige-btn" disabled>
+                        Prestige
+                    </button>
+                    <div class="header-counters">
+                        <span>RESPECT </span><span id="respect-amount">0</span>
+                        <span class="separator"> · </span>
+                        <span>PRESTIGE </span><span id="prestige-level">0</span>
+                    </div>
+                </div>
             </div>
         </header>
 
@@ -48,14 +49,6 @@
                 <h2>Criminal Empire</h2>
                 <div id="businesses-list">
                     <!-- Businesses will be dynamically generated -->
-                </div>
-            </div>
-
-            <!-- Upgrades Panel -->
-            <div class="upgrades-container">
-                <h3>Empire Upgrades</h3>
-                <div id="upgrades-list">
-                    <!-- Upgrades will be dynamically generated -->
                 </div>
             </div>
         </main>
